Fix overflow on dropdown

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ html, body {
     height: 100%;
     font-family: "Arial", "Helvetica Neue", sans-serif;
 }
+h1 {
+    border-bottom: 1px dotted #ccc;
+}
 .main-section {
     width: 800px;
     margin: 50px auto;
@@ -30,10 +33,10 @@ html, body {
     margin-left: 20px;
 }
 .dropdown ul {
-    padding: 0 0 0 15px;
+    padding: 0;
     margin: 0;
     min-height: 100px;
-    max-height: 200px;
+    max-height: 205px;
     overflow: auto;
     width: 250px;
 }
